package com.modelagem.pooprojeto1.modelo;

public enum EstadoCompra {
    PENDENTE,
    CANCELADA,
    CONFIRMADA
}
