package com.modelagem.pooprojeto1.modelo;

public enum MeioPagamento {
    DINHEIRO,
    DEBITO,
    CREDITO
}
